# CourseWork1

./: .flake8  README.md  pyproject.toml  requirements.txt
src/: external_api.py  main.py  read_files.py  reports.py  services.py  views.py
tests/: conftest.py  test_report.py  test_services.py  test_views.py
